--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 .phpunit.result.cache
 /.phpcs-cache
 /composer.lock
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
